--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ jar {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
     manifest {
-        attributes "Main-Class": "blockrenderer.Main"
+        attributes "Main-Class": "blockrenderer.BlockRenderer"
     }
 
     from {
